Fix events page layout: remove inline styles, add CSS classes for proper responsive grid and card styling

--- a/events.html
+++ b/events.html
@@ -286,15 +286,15 @@
                 <h2 id="whatWeDoHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">What We Do</h2>
                 <div class="row g-3 justify-content-center mb-5">
                     <div class="col-12">
-                        <div class="card h-100 shadow" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 24px 28px;">
+                        <div class="card h-100 shadow">
                             <div class="card-body">
-                                <p class="lead text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
+                                <p class="lead text-charcoal mb-3">
                                     <b>Bloom'n Events Co.</b> delivers corporate experiences that connect, elevate, and inspire. From single-day activations to multiday retreats—networking, professional development, leadership, and brand engagement across Perth and Western Australia.
                                 </p>
-                                <p class="text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
+                                <p class="text-charcoal mb-3">
                                     We design environments that reflect your team's culture and objectives. One team handles strategy, design, fabrication, and execution—so you don't manage multiple vendors or coordinate hand-offs.
                                 </p>
-                                <p class="text-charcoal mb-0" style="text-align: left; max-width: 100% !important; width: 100% !important;">
+                                <p class="text-charcoal mb-0">
                                     Based in Brookton, WA. 40+ years of combined expertise. Engineering-grade reliability for corporate and government clients.
                                 </p>
                             </div>
@@ -302,34 +302,34 @@
                     </div>
                     <div class="col-12">
                         <div class="row g-2">
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (1).jpg" class="img-fluid rounded shadow" alt="Corporate networking event setup" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (2).jpg" class="img-fluid rounded shadow" alt="Brand activation at business event" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (3).jpg" class="img-fluid rounded shadow" alt="Conference setup with arrangements" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (4).JPG" class="img-fluid rounded shadow" alt="Product launch event" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/00ef2aa7-6a7e-45d9-9613-0f17e9c0941c.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/02f37f68-0f92-4a73-ab31-9214554139ec.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/064a7a51-766f-4fcf-b1df-f934851ef16c.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/1292f05a-3499-44dc-a9b9-09a7bd33d047.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/1fd2ee64-1cbe-4d47-8087-c8d748149530.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/25d854af-18a7-46ed-9cb8-1e3d7a818715.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
                         </div>
@@ -339,7 +339,7 @@
                 <!-- Event Types -->
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow service-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow service-card">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Networking Events</h3>
                                 <p class="text-charcoal">Intentional layouts and atmospheric styling that naturally inspire conversation and meaningful guest interactions.</p>
@@ -347,7 +347,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow service-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow service-card">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Conferences & Workshops</h3>
                                 <p class="text-charcoal">Full event experiences from small roundtables to large conferences with artful sessions in leadership, wellness, and creativity.</p>
@@ -355,7 +355,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow service-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow service-card">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Product Launches</h3>
                                 <p class="text-charcoal">Immersive brand experiences with interactive installations, dynamic displays, and engaging activities.</p>
@@ -363,7 +363,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow service-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow service-card">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Custom Experiences</h3>
                                 <p class="text-charcoal">Distinctive events tailored to embody your brand and goals, delivering unforgettable experiences for every attendee.</p>
@@ -380,10 +380,10 @@
                 <h2 id="howItWorksHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">How It Works</h2>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow why-us-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow why-us-card">
                             <div class="card-body text-center">
                                 <div class="why-us-icon mb-3">
-                                    <i class="bi bi-chat-dots" style="font-size: 3rem; color: var(--coreGold);"></i>
+                                    <i class="bi bi-chat-dots"></i>
                                 </div>
                                 <h3 class="text-gold mb-3">1. Consultation</h3>
                                 <p class="text-charcoal">We start with a detailed consultation to understand your objectives, audience, budget, and vision. We'll discuss your goals and explore how we can bring your event to life.</p>
@@ -391,7 +391,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow why-us-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow why-us-card">
                             <div class="card-body text-center">
                                 <div class="why-us-icon mb-3">
                                     <i class="bi bi-pencil-square" style="font-size: 3rem; color: var(--coreGold);"></i>
@@ -402,7 +402,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow why-us-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow why-us-card">
                             <div class="card-body text-center">
                                 <div class="why-us-icon mb-3">
                                     <i class="bi bi-tools" style="font-size: 3rem; color: var(--coreGold);"></i>
@@ -413,7 +413,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card h-100 shadow why-us-card" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow why-us-card">
                             <div class="card-body text-center">
                                 <div class="why-us-icon mb-3">
                                     <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--coreGold);"></i>
@@ -433,7 +433,7 @@
                 <h2 id="whatYouGetHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">What You Get</h2>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Full-Service Event Management</h3>
                                 <p class="text-charcoal">From initial concept through to pack-down, we handle every aspect of your event. No need to coordinate multiple vendors—we manage it all.</p>
@@ -441,7 +441,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Custom Design & Styling</h3>
                                 <p class="text-charcoal">Every event is uniquely designed to reflect your brand and objectives. Our in-house design team creates cohesive visual experiences that align with your message.</p>
@@ -449,7 +449,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Technical Expertise</h3>
                                 <p class="text-charcoal">With 40+ years of engineering experience, we ensure all technical elements—lighting, sound, power, structures—are safe, compliant, and professionally executed.</p>
@@ -457,7 +457,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Atmospheric Styling</h3>
                                 <p class="text-charcoal">We create environments that naturally facilitate connection and engagement. Thoughtful layouts, lighting, and styling ensure your event feels welcoming and purposeful.</p>
@@ -465,7 +465,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Single Point of Contact</h3>
                                 <p class="text-charcoal">One dedicated team manages everything, simplifying communication and ensuring consistency. You have a single point of accountability throughout the process.</p>
@@ -473,7 +473,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                        <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Proven Results</h3>
                                 <p class="text-charcoal">We've successfully delivered events for leading Perth businesses including <a href="case-study-centuria-connect140.html" class="text-gold">Centuria Capital</a>, <a href="case-study-centuria-50th-birthday.html" class="text-gold">140 St Georges Terrace</a>, and <a href="case-study-hawaiian-forrestfield.html" class="text-gold">Hawaiian Shopping Centres</a>.</p>
