Remove remaining inline icon styles from events page

--- a/events.html
+++ b/events.html
@@ -394,7 +394,7 @@
                         <div class="card h-100 shadow why-us-card">
                             <div class="card-body text-center">
                                 <div class="why-us-icon mb-3">
-                                    <i class="bi bi-pencil-square" style="font-size: 3rem; color: var(--coreGold);"></i>
+                                    <i class="bi bi-pencil-square"></i>
                                 </div>
                                 <h3 class="text-gold mb-3">2. Design & Planning</h3>
                                 <p class="text-charcoal">Our team creates a comprehensive event plan including layout, styling, technical requirements, and timeline. We handle all design, logistics, and coordination in-house.</p>
@@ -405,7 +405,7 @@
                         <div class="card h-100 shadow why-us-card">
                             <div class="card-body text-center">
                                 <div class="why-us-icon mb-3">
-                                    <i class="bi bi-tools" style="font-size: 3rem; color: var(--coreGold);"></i>
+                                    <i class="bi bi-tools"></i>
                                 </div>
                                 <h3 class="text-gold mb-3">3. Execution</h3>
                                 <p class="text-charcoal">On event day, our team manages setup, technical elements, styling, and coordination. We ensure everything runs smoothly so you can focus on your guests and objectives.</p>
@@ -416,7 +416,7 @@
                         <div class="card h-100 shadow why-us-card">
                             <div class="card-body text-center">
                                 <div class="why-us-icon mb-3">
-                                    <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--coreGold);"></i>
+                                    <i class="bi bi-check-circle"></i>
                                 </div>
                                 <h3 class="text-gold mb-3">4. Follow-Up</h3>
                                 <p class="text-charcoal">After the event, we handle pack-down and provide a summary. We're available for feedback and to discuss future events or ongoing partnerships.</p>
