--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                         <i class="bi bi-send"></i>
                     </button>
                 </div>
-                <div class="chatbot-typing" id="chatbot-typing">
+                <div class="chatbot-typing chatbot-typing-hidden" id="chatbot-typing">
                     <div class="chatbot-typing-dots">
                         <span></span>
                         <span></span>
