Fix Bootstrap accordion: replace class selector with unique ID for data-bs-parent attribute in footer partial and all case study pages

--- a/case-study-hawaiian-forrestfield.html
+++ b/case-study-hawaiian-forrestfield.html
@@ -610,14 +610,14 @@
         <div class="container py-2 px-sm-0">
             <div class="row align-items-center">
                 <div class="col-9 footer-column">
-                    <div class="row">
+                    <div class="row" id="footer-accordion-container">
                         <div class="col-4 footer-accordion-column">
                             <h5>Bloom'n</h5>
                             <button class="footer-accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#footer-accordion-bloomn" aria-expanded="false" aria-controls="footer-accordion-bloomn">
                                 <span>Bloom'n</span>
                                 <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                             </button>
-                            <div class="footer-accordion-content collapse" id="footer-accordion-bloomn" data-bs-parent=".footer-accordion-column">
+                            <div class="footer-accordion-content collapse" id="footer-accordion-bloomn" data-bs-parent="#footer-accordion-container">
                                 <ul class="nav d-flex flex-column row-gap-0">
                                     <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
                                     <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
@@ -632,7 +632,7 @@
                                 <span>Portfolio</span>
                                 <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                             </button>
-                            <div class="footer-accordion-content collapse" id="footer-accordion-portfolio" data-bs-parent=".footer-accordion-column">
+                            <div class="footer-accordion-content collapse" id="footer-accordion-portfolio" data-bs-parent="#footer-accordion-container">
                                 <ul class="nav d-flex flex-column row-gap-0">
                                     <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
                                     <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
@@ -647,7 +647,7 @@
                                 <span>Success Stories</span>
                                 <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                             </button>
-                            <div class="footer-accordion-content collapse" id="footer-accordion-success" data-bs-parent=".footer-accordion-column">
+                            <div class="footer-accordion-content collapse" id="footer-accordion-success" data-bs-parent="#footer-accordion-container">
                                 <ul class="nav d-flex flex-column row-gap-0">
                                     <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
                                     <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
