Remove inline styles from events page image grid to match workshops/displays responsive 2x5 layout

--- a/events.html
+++ b/events.html
@@ -302,34 +302,34 @@
                     </div>
                     <div class="col-12">
                         <div class="row g-2">
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (1).jpg" class="img-fluid rounded shadow" alt="Corporate networking event setup" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (2).jpg" class="img-fluid rounded shadow" alt="Brand activation at business event" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (3).jpg" class="img-fluid rounded shadow" alt="Conference setup with arrangements" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria Connect140/Connect140 (4).JPG" class="img-fluid rounded shadow" alt="Product launch event" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/00ef2aa7-6a7e-45d9-9613-0f17e9c0941c.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/02f37f68-0f92-4a73-ab31-9214554139ec.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/064a7a51-766f-4fcf-b1df-f934851ef16c.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/1292f05a-3499-44dc-a9b9-09a7bd33d047.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/1fd2ee64-1cbe-4d47-8087-c8d748149530.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-12 col-sm-6 col-md-4 col-lg" style="flex: 0 0 20%; max-width: 20%;">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="assets/images/Centuria 50th Birthday/25d854af-18a7-46ed-9cb8-1e3d7a818715.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
                         </div>
